--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 bin
+obj/Debug/netcoreapp3.1/TheJam.pdb
+obj/Debug/netcoreapp3.1/TheJam.dll
+obj/Debug/netcoreapp3.1/TheJam.csprojAssemblyReference.cache
+obj/Debug/netcoreapp3.1/TheJam.csproj.FileListAbsolute.txt
+bin/Debug/netcoreapp3.1/TheJam.pdb
+bin/Debug/netcoreapp3.1/TheJam.dll
